# pr-fairy

./: .gitignore  README.md  install.sh  pyproject.toml
src/pr_fairy/: cli.py
src/pr_fairy/core/: config.py  fixer.py  llm.py  llm_fixer.py  model_recommender.py  ollama.py  scanner.py  wizard.py
